--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="teal_300">#D5DAD9</color>
     <color name="blue">#46E1EF</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="red">#FF0000</color>
 
 </resources>
