--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -46,6 +46,7 @@
                 android:drawableLeft="@drawable/ic_baseline_person_24"
                 android:drawablePadding="8dp"
                 android:hint="Username or email"
+                android:singleLine="true"
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background"
@@ -61,6 +62,7 @@
                 android:drawableLeft="@drawable/ic_baseline_lock_24"
                 android:drawablePadding="8dp"
                 android:hint="Password"
+                android:singleLine="true"
                 android:inputType="textPassword"
                 android:padding="8dp"
                 android:textColor="@color/black"
@@ -87,7 +89,6 @@
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
     <LinearLayout
@@ -113,6 +114,5 @@
         android:textSize="14sp"
         android:textColor="@color/teal_700"
         android:textStyle="bold"/>
-
     </LinearLayout>
 </LinearLayout>
