--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +9,7 @@
     <!--    <ScrollView-->
     <!--        android:layout_width="match_parent"-->
     <!--        android:layout_height="match_parent">-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,7 +24,7 @@
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="419dp"
-                android:layout_height="150dp"
+                android:layout_height="100dp"
                 android:scaleType="fitXY"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -31,20 +32,22 @@
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="100dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.539"
                 app:layout_constraintStart_toStartOf="@+id/imageView"
                 app:layout_constraintTop_toBottomOf="@+id/imageView"
+                app:layout_constraintVertical_bias="0.471"
                 app:srcCompat="@drawable/_23456" />
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Udata senevirathne"
+                android:layout_marginTop="5dp"
+                android:text="Udara senevirathne"
                 android:textColor="@color/black"
                 android:textSize="25sp"
                 android:textStyle="bold"
@@ -55,7 +58,7 @@
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="135dp"
                 android:text="Example@gmail.com"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -64,20 +67,23 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <LinearLayout
-                android:layout_width="413dp"
-                android:layout_height="574dp"
+                android:layout_width="380dp"
+                android:layout_height="500dp"
                 android:orientation="vertical"
-                android:paddingTop="60dp"
+                android:paddingTop="10dp"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.483"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2">
+                app:layout_constraintTop_toBottomOf="@+id/textView2"
+                app:layout_constraintVertical_bias="0.538">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/button"
                     style="@android:style/Widget.Button"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="45dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
@@ -96,7 +102,7 @@
                     android:id="@+id/acc_btn_2"
                     style="@android:style/Widget.Button"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="45dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
@@ -118,7 +124,7 @@
                     android:id="@+id/button3"
                     style="@android:style/Widget.Button"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="45dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
@@ -138,7 +144,7 @@
                     android:id="@+id/button4"
                     style="@android:style/Widget.Button"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="45dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
@@ -158,7 +164,7 @@
                     android:id="@+id/button5"
                     style="@android:style/Widget.Button"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="45dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
@@ -177,12 +183,12 @@
                 <androidx.appcompat.widget.AppCompatButton
                     style="@android:style/Widget.Button"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="32dp"
                     android:background="@drawable/bg"
-                    android:text="Log out"
+                    android:text="Log Out"
                     android:textColor="#ffffff"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -190,4 +196,4 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
     <!--    </ScrollView>-->
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
